--- a/web/src/main/resources/config/application.yml
+++ b/web/src/main/resources/config/application.yml
@@ -20,7 +20,7 @@ demoMode: false
 
 server:
 
-  port: 8091
+  port: 8089
   servlet:
     context-path: /
   tomcat:
@@ -41,7 +41,7 @@ jdbc:
   driver: com.mysql.jdbc.Driver
   url: jdbc:mysql://mysql_ip:mysql_port/jeesite?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&allowPublicKeyRetrieval=true
   username: mysql_user
-  password: mysql_password
+  password: mysql_pwd
   testSql: SELECT 1
 
 #  # Oracle 数据库配置
